Added modsdetector for dll

--- a/XP/TLDWorkshop.csproj
+++ b/XP/TLDWorkshop.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Mod.cs" />
+    <Compile Include="ModsDetector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Main.resx">
